package com.zullid.apolo_music_bot.player.state;

import com.sedmelluq.discord.lavaplayer.player.AudioLoadResultHandler;
import com.sedmelluq.discord.lavaplayer.player.AudioPlayer;
import com.sedmelluq.discord.lavaplayer.tools.FriendlyException;
import com.sedmelluq.discord.lavaplayer.track.AudioPlaylist;
import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
import com.zullid.apolo_music_bot.player.Player;
import com.zullid.apolo_music_bot.services.AudioPlayerService;
import com.zullid.apolo_music_bot.services.QueueService;
import lombok.extern.slf4j.Slf4j;
import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;

/**
 * State representing the player is actively playing music.
 * <p>
 * In this state, the player can add tracks to the queue, pause playback,
 * stop and clear the queue, or skip to the next track. Resume is not allowed
 * since the player is already playing.
 * </p>
 *
 * @author Dante Zulli (dantezulli2004@gmail.com)
 */
@Slf4j
public class PlayingState extends PlayerState {

    private final AudioPlayerService audioPlayerService;
    private final QueueService queueService;

    PlayingState(Player player) {
        super(player);
        this.audioPlayerService = player.getAudioPlayerService();
        this.queueService = player.getQueueService();
    }

    /**
     * Loads the requested query and queues the resulting track or playlist.
     * <p>
     * Search results and YouTube automatic mixes (URLs containing {@code list=RD},
     * generated when copying a song link from the browser address bar instead of
     * the share button) only queue the selected or first track to avoid flooding
     * the queue with an unwanted radio. Manually built playlists queue all tracks.
     * On no matches or load failure an error is sent and the player returns to
     * {@code ReadyState}.
     * </p>
     *
     * @param event the slash command interaction containing the {@code query} option
     */
    @Override
    public void onPlay(SlashCommandInteractionEvent event) {
        String query = event.getOption("query").getAsString();
        event.deferReply().queue();

        audioPlayerService.getPlayerManager().loadItem(
            query,
            new AudioLoadResultHandler() {
                @Override
                public void trackLoaded(AudioTrack track) {
                    queueService.addToQueue(track);
                    event
                        .getHook()
                        .sendMessage("Added to queue: " + track.getInfo().title)
                        .queue();
                }

                @Override
                public void playlistLoaded(AudioPlaylist playlist) {
                    if (
                        playlist.isSearchResult() || query.contains("list=RD")
                    ) {
                        // Search results or automatic mixes: just add the current/first track
                        AudioTrack track =
                            playlist.getSelectedTrack() != null
                                ? playlist.getSelectedTrack()
                                : playlist.getTracks().get(0);
                        queueService.addToQueue(track);
                        event
                            .getHook()
                            .sendMessage(
                                "Added to queue: " + track.getInfo().title
                            )
                            .queue();
                    } else {
                        // Regular playlists (PL...): add all tracks
                        for (AudioTrack track : playlist.getTracks()) {
                            queueService.addToQueue(track);
                        }
                        event
                            .getHook()
                            .sendMessage(
                                "Added " +
                                    playlist.getTracks().size() +
                                    " tracks to queue"
                            )
                            .queue();
                    }
                }

                @Override
                public void noMatches() {
                    event
                        .getHook()
                        .sendMessage("No matches found for: " + query)
                        .queue();
                    player.setState(new ReadyState(player));
                }

                @Override
                public void loadFailed(FriendlyException exception) {
                    event
                        .getHook()
                        .sendMessage(
                            "Error loading track: " + exception.getMessage()
                        )
                        .queue();
                    log.error("Error loading track", exception);
                    player.setState(new ReadyState(player));
                }
            }
        );
    }

    /**
     * Pauses playback and transitions to {@code PausedState}.
     *
     * @param event the slash command interaction
     */
    @Override
    public void onPause(SlashCommandInteractionEvent event) {
        AudioPlayer audioPlayer = audioPlayerService.getPlayer();
        audioPlayer.setPaused(true);
        event.reply("Paused the current track").queue();
        player.setState(new PausedState(player));
    }

    /**
     * Replies that resume is not needed while already playing.
     *
     * @param event the slash command interaction
     */
    @Override
    public void onResume(SlashCommandInteractionEvent event) {
        event.reply("Cannot resume: player is already playing.").queue();
    }

    /**
     * Stops playback, clears the queue and transitions to {@code ReadyState}.
     *
     * @param event the slash command interaction
     */
    @Override
    public void onStop(SlashCommandInteractionEvent event) {
        queueService.clearQueue();
        audioPlayerService.getPlayer().stopTrack();
        event.reply("Stopped playback and cleared the queue").queue();
        player.setState(new ReadyState(player));
    }

    /**
     * Skips the current track and advances the queue.
     *
     * @param event the slash command interaction
     */
    @Override
    public void onSkip(SlashCommandInteractionEvent event) {
        queueService.skipCurrentTrack();
        event.reply("Skipped to the next track").queue();
    }
}
